--- a/Detección_de_Señales_de_Tránsito.ipynb
+++ b/Detección_de_Señales_de_Tránsito.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,26 +10,14 @@
         "id": "Ky4fpNh81Iwe",
         "outputId": "8b5e0b9a-2098-4cdf-f61e-924952419e64"
       },
-      "outputs": [
-        {
-          "ename": "ImportError",
-          "evalue": "libGL.so.1: cannot open shared object file: No such file or directory",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcv2\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LabelBinarizer\n",
-            "\u001b[31mImportError\u001b[39m: libGL.so.1: cannot open shared object file: No such file or directory"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#!pip install keras\n",
         "import os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import cv2\n",
+        "#import cv2\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import LabelBinarizer\n",
         "from tensorflow.keras.models import Sequential\n",
@@ -42,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,13 +44,6 @@
           "output_type": "stream",
           "text": [
             "Num GPUs Available: 0\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-06-14 06:35:49.358365: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
           ]
         }
       ],
@@ -443,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -453,52 +434,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/content/drive/MyDrive/Colab Notebooks/Train/0\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/1\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/10\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/11\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/12\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/13\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/14\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/15\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/16\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/17\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/18\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/19\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/2\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/20\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/21\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/22\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/23\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/24\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/25\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/26\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/27\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/28\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/29\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/3\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/30\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/31\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/32\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/33\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/34\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/35\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/36\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/37\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/38\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/39\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/4\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/40\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/41\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/42\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/5\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/6\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/7\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/8\n",
-            "/content/drive/MyDrive/Colab Notebooks/Train/9\n"
+          "ename": "NameError",
+          "evalue": "name 'DATA_DIR' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m images = []\n\u001b[32m      9\u001b[39m labels = []\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m class_id \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(os.listdir(\u001b[43mDATA_DIR\u001b[49m)):\n\u001b[32m     12\u001b[39m     class_path = os.path.join(DATA_DIR, class_id)\n\u001b[32m     13\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.isdir(class_path): \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+            "\u001b[31mNameError\u001b[39m: name 'DATA_DIR' is not defined"
           ]
         }
       ],
@@ -506,7 +449,8 @@
         "# Parámetros\n",
         "IMG_HEIGHT = 32\n",
         "IMG_WIDTH = 32\n",
-        "DATA_DIR = '/content/drive/MyDrive/Colab Notebooks/Train'\n",
+        "#DATA_DIR = '/content/drive/MyDrive/Colab Notebooks/Train'\n",
+        "Data_DIR='TrafficSignals/Train'\n",
         "\n",
         "# Carga de imágenes\n",
         "images = []\n",
